--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: Shihao Yuan's academic site # the website title (if blank, full name will be used instead)
+title: Shihao Yuan # the website title (if blank, full name will be used instead)
 first_name: Shihao
 middle_name: 
 last_name: Yuan
