--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -6,7 +6,7 @@
 # blogger_url: # your blogger URL
 # bluesky_url: # your bluesky URL
 # dblp_url: # your DBLP profile url
-discord_id: ocean831 # your discord id (18-digit unique numerical identifier)
+# discord_id: ocean831 # your discord id (18-digit unique numerical identifier)
 email: syuan@mines.edu # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
